k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-app-ingress
  annotations:
    # Place the ALB in a public subnet to receive traffic from the Internet.
    alb.ingress.kubernetes.io/scheme: internet-facing
    # Route traffic directly to the Pod IP (highest performance for EKS/Fargate)
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/inbound-cidrs: 0.0.0.0/0
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          # Any traffic that has /api will be forwarded to the Backend Node.js
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 3000
          # Any other traffic that doesn't match the above paths (root /) will be forwarded to the Frontend React
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
